--- a/app/style.css
+++ b/app/style.css
@@ -72,7 +72,7 @@ body, html {
   right:0;
   top:0;
   z-index:1000;
-  background:rgba(255,255,255,0.4) no-repeat center center;
+  background: #eee no-repeat center center;
   background-image: url('./loading-animation.gif');
 }
 .animate-view-container { position:relative; min-height: 100%; }
@@ -89,3 +89,12 @@ body, html {
 .animate-view.ng-enter.ng-enter-active { opacity:1; }
 .animate-view.ng-leave { opacity:1; z-index:99; }
 .animate-view.ng-leave.ng-leave-active { opacity:0; }
+
+
+#super-container {
+  position: absolute;
+  top: 64px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
